[workspace]
members = [
  "changelog-sys",
  "cstrbuf",
  "lnetconfig",
  "lnetconfig-sys",
  "lu-version",
  "lustreapi-sys",
  "rustreapi",
]
resolver = "3"

[workspace.package]
authors = ["Robert Read <rread@thelustrecollective.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/lustre/lustre-release/"
version = "0.3.0"

[workspace.dependencies]
bindgen = "0.72"
bitmask-enum = "2"
cc = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
criterion = { version = "0.8", features = ["html_reports"] }
insta = "1"
libc = "0.2"
memchr = "2"
nix = { version = "0.29", features = ["fs", "user"] }
polling = "3"
rand = "0.9"
sequential-test = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"


[workspace.lints.clippy]
cast_lossless = "warn"
cast_possible_wrap = "warn"
unwrap_used = "deny"
