# Copyright (C) 2002 Cluster File Systems, Inc.
#
# This code is issued under the GNU General Public License.
# See the file COPYING in this distribution

DEFS=

MODULE = cobd
modulefs_DATA = cobd.o
EXTRA_PROGRAMS = cobd
LINX=

cobd_SOURCES = cache_obd.c lproc_cache.c $(LINX)

include $(top_srcdir)/Rules
