# Copyright (C) 2001  Cluster File Systems, Inc.
#
# This code is issued under the GNU General Public License.
# See the file COPYING in this distribution

demo_SCRIPTS = baseclean.sh basesetup.sh obdfsclean.sh obdfssetup.sh \
	obdtest.sh snap3clean.sh snap3set.sh snapclean.sh snapdel.sh \
	snaprest.sh snaprestclean.sh snapsetup.sh snaptest.sh
demo_DATA = config.sh
EXTRA_DIST = $(demo_SCRIPTS) $(demo_DATA)
